[gd_scene load_steps=45 format=3 uid="uid://c3xcgc53ytkha"]

[ext_resource type="Texture2D" uid="uid://bestoketk4juh" path="res://Assets/white-circle-frame-free-png.png" id="1_4bpjp"]
[ext_resource type="Script" path="res://MainMenu.gd" id="1_c07gs"]
[ext_resource type="Script" path="res://DirectionalLight3D.gd" id="2_uk0xg"]
[ext_resource type="PackedScene" uid="uid://e08ys0kpuber" path="res://options_menu.tscn" id="3_1fcbc"]
[ext_resource type="Script" path="res://WorldEnvironment.gd" id="3_apji1"]
[ext_resource type="PackedScene" uid="uid://cqor8n8beblgj" path="res://Assets/Ground.blend" id="4_jpacg"]
[ext_resource type="Theme" uid="uid://cbwe0o5y2s7wn" path="res://Theme.tres" id="5_xwxtl"]
[ext_resource type="FontFile" uid="uid://ben2npvnll1dt" path="res://Rubik-Bold.ttf" id="6_74uja"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter.gd" id="6_r11yq"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/stack/modifier_stack.gd" id="7_jbrqm"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/create_inside_random.gd" id="8_vyssr"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/randomize_transforms.gd" id="9_cvbe4"]
[ext_resource type="Shader" path="res://Water.gdshader" id="9_tipc8"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/relax.gd" id="10_0m6sc"]
[ext_resource type="Texture2D" uid="uid://c1mve1dhymfs6" path="res://displacement.png" id="10_ugoap"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/modifiers/project_on_geometry.gd" id="11_w8176"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_item.gd" id="12_53412"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/scatter_shape.gd" id="13_iqqby"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/box_shape.gd" id="14_2klpm"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/path_shape.gd" id="15_g2p57"]
[ext_resource type="Script" path="res://addons/proton_scatter/src/shapes/sphere_shape.gd" id="16_p6b3x"]
[ext_resource type="PackedScene" uid="uid://dmoakq5ljhjpf" path="res://Assets/Tree.blend" id="22_flbnu"]

[sub_resource type="Environment" id="Environment_tkeyh"]
volumetric_fog_enabled = true
volumetric_fog_density = 0.1
volumetric_fog_albedo = Color(0.203922, 1, 0.505882, 1)
volumetric_fog_emission = Color(0, 0.392157, 0.168627, 1)

[sub_resource type="FogMaterial" id="FogMaterial_bq4k5"]
density = 0.1
albedo = Color(0.403922, 0.494118, 0, 1)
emission = Color(0, 0.352941, 0.109804, 1)

[sub_resource type="Curve" id="Curve_rihxi"]
_data = [Vector2(0, 0), 0.0, 1.04847, 0, 0, Vector2(0.5, 0.197433), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.918705, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_ai4tt"]
curve = SubResource("Curve_rihxi")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e3q1e"]
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, 0.5, 0)
scale_curve = SubResource("CurveTexture_ai4tt")
turbulence_noise_strength = 0.1
turbulence_noise_scale = 0.1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ayjo4"]
transparency = 2
alpha_scissor_threshold = 0.9
alpha_antialiasing_mode = 0
albedo_color = Color(0.713726, 0, 0.156863, 1)
albedo_texture = ExtResource("1_4bpjp")
emission_enabled = true
emission = Color(0, 0.498039, 0.121569, 1)
emission_energy_multiplier = 16.0
billboard_mode = 1
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_228qg"]
material = SubResource("StandardMaterial3D_ayjo4")

[sub_resource type="Resource" id="Resource_econn"]
script = ExtResource("8_vyssr")
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1
amount = 1000
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 1

[sub_resource type="Resource" id="Resource_10gu0"]
script = ExtResource("9_cvbe4")
enabled = false
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2
position = Vector3(0.15, 0.15, 0.15)
rotation = Vector3(20, 360, 20)
scale = Vector3(0.1, 0.1, 0.1)
enabled = false
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 2

[sub_resource type="Resource" id="Resource_uhvhn"]
script = ExtResource("10_0m6sc")
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0
iterations = 3
offset_step = 0.2
consecutive_step_multiplier = 0.75
use_computeshader = true
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = true
reference_frame = 0

[sub_resource type="Resource" id="Resource_lgp0y"]
script = ExtResource("11_w8176")
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0
ray_direction = Vector3(0, -1, 0)
ray_length = 5.0
ray_offset = 5.0
remove_points_on_miss = false
align_with_collision_normal = false
max_slope = 90.0
collision_mask = 1
exclude_mask = 0
enabled = true
override_global_seed = false
custom_seed = 0
restrict_height = false
reference_frame = 0

[sub_resource type="Resource" id="Resource_8pmf3"]
script = ExtResource("7_jbrqm")
stack = Array[Resource("res://addons/proton_scatter/src/modifiers/base_modifier.gd")]([SubResource("Resource_econn"), SubResource("Resource_10gu0"), SubResource("Resource_uhvhn"), SubResource("Resource_lgp0y")])

[sub_resource type="Resource" id="Resource_at1xq"]
script = ExtResource("14_2klpm")
size = Vector3(17.8646, 1, 18.1616)

[sub_resource type="Curve3D" id="Curve3D_i20do"]
bake_interval = 0.01
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 4.21693, 0, -2.0582, 0, 0, 0, 0, 0, 0, 2.12814, 0, 2.71616, 0, 0, 0, 0, 0, 0, 0.380382, 0, 5.27386, 0, 0, 0, 0, 0, 0, -2.56097, 0, 6.51008, 0, 0, 0, 0, 0, 0, -6.64235, 0, 5.12235, 0, 0, 0, 0, 0, 0, -9.85041, 0, 3.73924, 0, 0, 0, 0, 0, 0, -11.4703, 0, 2.46039, 0, 0, 0, 0, 0, 0, -10.2341, 0, -2.91077, 0, 0, 0, 0, 0, 0, -6.95168, 0, -6.78994, 0, 0, 0, 0, 0, 0, -8.40105, 0, -3.20917, 0, 0, 0, 0, 0, 0, -9.63727, 0, -0.310444, 0, 0, 0, 0, 0, 0, -9.3815, 0, 2.33251, 0, 0, 0, 0, 0, 0, -8.01739, 0, 3.8245, 0, 0, 0, 0, 0, 0, -4.77764, 0, 5.35912, 0, 0, 0, 0, 0, 0, -2.47571, 0, 5.23123, 0, 0, 0, 0, 0, 0, -0.727954, 0, 4.37867, 0, 0, 0, 0, 0, 0, 0.678777, 0, 2.162, 0, 0, 0, 0, 0, 0, 2.2134, 0, -0.0120459, 0, 0, 0, 0, 0, 0, 3.74801, 0, -2.22872),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 19

[sub_resource type="Resource" id="Resource_ltlc3"]
script = ExtResource("15_g2p57")
closed = true
thickness = 3.275
curve = SubResource("Curve3D_i20do")

[sub_resource type="Resource" id="Resource_1ks3t"]
script = ExtResource("16_p6b3x")
radius = 2.79412

[sub_resource type="Resource" id="Resource_tlu1r"]
script = ExtResource("16_p6b3x")
radius = 1.23263

[sub_resource type="Resource" id="Resource_x31qp"]
script = ExtResource("16_p6b3x")
radius = 1.23263

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yiejb"]
render_priority = 0
shader = ExtResource("9_tipc8")
shader_parameter/main_color = Color(0.215686, 0.352941, 0.0705882, 1)
shader_parameter/intersection_color = Color(0.133333, 0.164706, 0, 1)
shader_parameter/intersection_max_threshold = 0.25
shader_parameter/displ_amount = 0.1
shader_parameter/near = 0.15
shader_parameter/far = 300.0
shader_parameter/displ_tex = ExtResource("10_ugoap")

[sub_resource type="Animation" id="Animation_51nvt"]
resource_name = "OptionsFade"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OPTIONS:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o4aej"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("OPTIONS:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5ee7x"]
_data = {
"OptionsFade": SubResource("Animation_51nvt"),
"RESET": SubResource("Animation_o4aej")
}

[node name="Node3D" type="Node3D"]
script = ExtResource("1_c07gs")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true
script = ExtResource("2_uk0xg")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tkeyh")
script = ExtResource("3_apji1")

[node name="3dBackground" type="Node3D" parent="."]

[node name="FogVolume" type="FogVolume" parent="3dBackground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.171802, -22)
size = Vector3(106, 13.5314, 77)
material = SubResource("FogMaterial_bq4k5")

[node name="Ground-62edd5c5e951bbd1c34e4556fc004e8e" parent="3dBackground" instance=ExtResource("4_jpacg")]
transform = Transform3D(0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, -41, -2, -12)

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="3dBackground"]

[node name="GPUParticles3D12" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.11944, -1.28749, -9.26347)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D13" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.46616, -1.28749, -10.2647)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D14" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.46616, -1.28749, -11.2647)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D15" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.03182, -1.28749, -11.0552)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D16" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.9374, -1.28749, -8.93618)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D17" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54026, -1.28749, -6.56105)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D18" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0732603, -1.28749, -4.30234)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D19" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.51145, -1.28749, -2.99834)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D20" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.07287, -1.28749, -3.65034)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D21" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.35486, -1.28749, -4.60505)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D22" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.91628, -1.28749, -5.86248)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D23" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10.9163, -1.28749, -7.86248)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D24" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -9.91628, -1.28749, -10.8625)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D25" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8.54243, -1.28749, -13.3075)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="GPUParticles3D26" type="GPUParticles3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -7.16858, -1.28749, -15.1005)
cast_shadow = 0
amount = 5
lifetime = 2.0
randomness = 0.5
visibility_aabb = AABB(-4, -4.36914, -4, 8, 8, 8)
process_material = SubResource("ParticleProcessMaterial_e3q1e")
draw_pass_1 = SubResource("QuadMesh_228qg")

[node name="CSGBox3D3" type="CSGBox3D" parent="3dBackground/CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -2, -8.5)
size = Vector3(15, 1, 14)

[node name="SubViewportContainer" type="SubViewportContainer" parent="3dBackground"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="3dBackground/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="3dBackground/SubViewportContainer/SubViewport"]
transform = Transform3D(0.960294, -0.114365, 0.254473, 0, 0.91212, 0.409923, -0.278991, -0.393647, 0.875903, -0.39, 2.18, 0.5)

[node name="ProtonScatter" type="Node3D" parent="3dBackground"]
script = ExtResource("6_r11yq")
modifier_stack = SubResource("Resource_8pmf3")
Performance/use_chunks = true
Performance/chunk_dimensions = Vector3(15, 15, 15)

[node name="ScatterItem" type="Node3D" parent="3dBackground/ProtonScatter"]
script = ExtResource("12_53412")
source_scale_multiplier = 0.2
path = "res://StylizedGrass.tscn"

[node name="ScatterShape" type="Node3D" parent="3dBackground/ProtonScatter"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, -2.95834, 0, -9.05314)
script = ExtResource("13_iqqby")
shape = SubResource("Resource_at1xq")

[node name="ScatterShape2" type="Node3D" parent="3dBackground/ProtonScatter"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, -9.05314)
script = ExtResource("13_iqqby")
negative = true
shape = SubResource("Resource_ltlc3")

[node name="ScatterShape3" type="Node3D" parent="3dBackground/ProtonScatter"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, -2.52325, 0, -10.185)
script = ExtResource("13_iqqby")
negative = true
shape = SubResource("Resource_1ks3t")

[node name="ScatterShape4" type="Node3D" parent="3dBackground/ProtonScatter"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, 1.26363, -0.668353, -12.2015)
script = ExtResource("13_iqqby")
negative = true
shape = SubResource("Resource_tlu1r")

[node name="ScatterShape5" type="Node3D" parent="3dBackground/ProtonScatter"]
transform = Transform3D(1, 0, -2.98023e-08, 0, 1, 0, 2.98023e-08, 0, 1, -6.13169, -0.668353, -8.16516)
script = ExtResource("13_iqqby")
negative = true
shape = SubResource("Resource_x31qp")

[node name="CSGBox3D2" type="CSGBox3D" parent="3dBackground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.60177, -1.65165, -15.1035)
size = Vector3(39, 1, 35)
material = SubResource("ShaderMaterial_yiejb")

[node name="Tree-73bf9cc24f060201c192c7305dc9670e12" parent="3dBackground" instance=ExtResource("22_flbnu")]
transform = Transform3D(-0.331486, 0, 0.943461, 0, 1, 0, -0.943461, 0, -0.331486, -6.14492, -0.72989, -8.19)

[node name="Tree-73bf9cc24f060201c192c7305dc9670e13" parent="3dBackground" instance=ExtResource("22_flbnu")]
transform = Transform3D(1.05208, 0, 0.5667, 0, 1.195, 0, -0.5667, 0, 1.05208, 1.26968, -0.72989, -12.0666)

[node name="Tree-73bf9cc24f060201c192c7305dc9670e14" parent="3dBackground" instance=ExtResource("22_flbnu")]
transform = Transform3D(0.123422, 0, -1.10312, 0, 1.11, 0, 1.10312, 0, 0.123422, -13.9582, -0.72989, -10.8133)

[node name="Ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameTitle" type="Label" parent="Ui"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -197.0
offset_top = 129.0
offset_right = 198.0
offset_bottom = 226.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 100
text = "RAY CAT"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Ui/MarginContainer"]
layout_mode = 2

[node name="StartBtn" type="Button" parent="Ui/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("5_xwxtl")
theme_override_colors/font_pressed_color = Color(0.203922, 1, 0.505882, 1)
theme_override_colors/font_hover_color = Color(0.203922, 1, 0.505882, 1)
theme_override_fonts/font = ExtResource("6_74uja")
theme_override_font_sizes/font_size = 50
text = "START"

[node name="OptionsBtn" type="Button" parent="Ui/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(347.63, 80)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_pressed_color = Color(0.203922, 1, 0.505882, 1)
theme_override_colors/font_hover_color = Color(0.203922, 1, 0.505882, 1)
theme_override_font_sizes/font_size = 50
text = "OPTIONS"

[node name="QuitBtn" type="Button" parent="Ui/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0.203922, 1, 0.505882, 1)
theme_override_colors/font_hover_color = Color(0.203922, 1, 0.505882, 1)
theme_override_font_sizes/font_size = 50
text = "QUIT"

[node name="Credits" type="Control" parent="Ui"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Ui/Credits"]
layout_mode = 0
offset_left = 64.0
offset_top = 752.0
offset_right = 364.0
offset_bottom = 1029.0
theme_override_font_sizes/font_size = 30
text = "Code > @kormisch

Music > @sucellos

Sfx > @leonardpeanut

Art, Ui, Level Design > @tailsc"

[node name="OPTIONS" parent="." instance=ExtResource("3_1fcbc")]
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackBtn" type="Button" parent="OPTIONS"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -112.0
offset_right = 128.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5ee7x")
}

[connection signal="pressed" from="Ui/MarginContainer/VBoxContainer/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="Ui/MarginContainer/VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
[connection signal="pressed" from="Ui/MarginContainer/VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
[connection signal="pressed" from="OPTIONS/BackBtn" to="." method="_on_back_btn_pressed"]
